@@ -4,12 +4,17 @@ package edu.colorado.phet.common.phetcommon.util.logging;
 
 import javax.swing.*;
 
-public class JFrameLogger implements ILogger {
+public class JFrameLogger extends AbstractLogger {
 
     private JFrame frame;
     private JTextArea jTextArea;
-
+    
     public JFrameLogger( String title ) {
+        this( title, true /* enabled */ );
+    }
+    
+    public JFrameLogger( String title, boolean enabled ) {
+        super( enabled );
         frame = new JFrame( title );
         jTextArea = new JTextArea( 30, 60 );
         frame.setContentPane( new JScrollPane( jTextArea ) );
@@ -17,12 +22,10 @@ public class JFrameLogger implements ILogger {
     }
 
     public void log( String message ) {
-        jTextArea.append( message + "\n" );
-        jTextArea.setCaretPosition( jTextArea.getText().length() );
-    }
-
-    public void logError( String message ) {
-        log( "ERROR: " + message );
+        if ( isEnabled() ) {
+            jTextArea.append( message + "\n" );
+            jTextArea.setCaretPosition( jTextArea.getText().length() );
+        }
     }
 
     public void setVisible( boolean visible ) {
@@ -32,7 +35,6 @@ public class JFrameLogger implements ILogger {
     public static void main( String[] args ) {
         JFrameLogger logger = new JFrameLogger( "test log" );
         logger.setVisible( true );
-        logger.log( "good news" );
-        logger.logError( "bad news" );
+        logger.test();
     }
 }
