@@ -2,9 +2,16 @@
 
 package edu.colorado.phet.common.phetcommon.util.logging;
 
-public class NullLogger implements ILogger {
+public class NullLogger extends AbstractLogger {
 
+    public NullLogger() {
+        super( false );
+    }
+    
     public void log( String message ) {}
-
-    public void logError( String message ) {}
+    
+    public static void main( String[] args ) {
+        ILogger logger = new NullLogger();
+        logger.test();
+    }
 }
